Marcs writeup portions added

--- a/FinalProject_group036.ipynb
+++ b/FinalProject_group036.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Fill in your overview here*"
+    "Our goal for this project was to gain a more intimate understanding of the relationship between social media and mental health in people aged fourteen to twenty eight. We designed a survey that we distributed amongst our personal social networks. The survey asked users how much time they spend on social media applications, how many they use, and how they describe their current mental health status. We implemented the information into an organized data set which we meticulously analyzed in order to accept or reject our null hypothesis. With statistical analysis, data visualizations, and logistic regression we demonstrate that there is a correlation between the two"
    ]
   },
   {
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are currently a substantial amount of teenagers and young adults (ages 14-28) who use the top social media applications in the United States. Taking that into consideration, does extensive usage (2+ hours/day?) of the aforementioned applications by these users generate an onset of symptoms that correspond to the clinical criteria of an Anxiety Disorder and/or Depressive Disorder?"
+    "There are an ample amount of teenagers and young adults (aged 14-28) who use prevalent social media applications in the United States (Facebook, Instagram, Twitter, Snapchat, Reddit.) There are also a rising number of self-reported mental health cases reported within the same population. Taking those matters into consideration, does extensive social media usage (2+ hours/day) by an individual generate a higher likelihood of self-reporting a mental health disorder such as Anxiety or Depression?"
    ]
   },
   {
@@ -73,36 +73,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Fill in your background and prior work here* \n",
+    "We reached a unanimous consensus to investigate this question when we realized that a quote from the netflix documentary “The Social Dilemma” had resonated with each of us. Tristan Harris, a well known computer scientist who formerly worked at google stated that “software developers design apps to be as addictive as slot machines.” This made us wonder what impact that has on the mental health of people in our age group. Social media applications can act as echo chambers for opinions, reinforcement mechanisms, and primary communication platforms. They earn our attention with clever features such as the like button or the endless scroll. We have become programmed to seek gratification from social media apps, send and receive notifications, and then ultimately continue this feedback loop. Seeing how this is such a new phenomenon we thought its effect on our mental health is likely not yet completely understood.  Our project was inspired by a genuine concern in trends of mental health and cell phone usage. We were a part of the generation that grew up with social media and began using it as early as the sixth grade all the way until the present day. The following four sources were critical for familiarizing ourselves with the work that's already been done in the field and what gaps there are left to fill.\n",
+    " \n",
     "\n",
-    "References (include links):\n",
-    "- 1) [A Majority of Teens Have Experienced Some Form of Cyberbullying](https://www.pewresearch.org/internet/2018/09/27/a-majority-of-teens-have-experienced-some-form-of-cyberbullying/)\n",
+    "References:\n",
+    "- 1) [The Social Dilemmma](https://www.netflix.com/title/81254224)\n",
+    "This documentary tells the tale of how a young population is addicted to social media because technology companies are manipulating them. Furthemore, due to complex algorithms designed by engineers, social media applications manage to constantly acquire a better understanding of each individual user. The subjective algorithms pick up on the likes and dislikes of the users then proceed to create a personalized feed for each individual. They also take note of what users are paying attention to and how long in order to keep up with their interests.  This documentary served as a conceptual tool that helped us understand why social media is addicting and how it may potentially lead to mental health disorders.  \n",
     "\n",
-    "Explanation:\n",
     "\n",
     "- 2) [DATA > Teens, Social Media & Technology Overview 2015](https://www.pewresearch.org/internet/2015/04/09/teens-social-media-technology-2015/) \n",
     "\n",
-    "Explanation:\n",
+    "Here we found some vital data related to our topic. This study gave us insight into just how prominent cell phone usage is. A little over a thousand individuals aged 13-17 and one of their parents answered a survey by Pew Research Center. The results reported that 92% of teenagers go online on a daily basis and that nearly a quarter of them report being online constantly. Moreover, much of their online activity is performed on cell phones. They state that three quarters of teenagers have smartphones, and only 12% of those aged 13-17 have no phone at all. Facebook and Instagram were found to be the most popular applications followed by Snapchat and Twitter. 71% of the teens reported using more than one platform. Lastly, females use these applications more than males who are more inclined to play video games. \n",
     "\n",
     "- 3) [Social Media Use and its Connection to Mental Health: A Systematic Review](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7364393/#:~:text=A%20new%20study%20found%20that,the%20group%20using%20social%20media)\n",
-    "\n",
-    "Explanation:\n",
+    "The authors of this meta-analyses performed a thorough investigation of 16 peer reviewed research papers. They sought out to  find potential correlations between social media and two specific mental illnesses (anxiety and depression.) The authors state that humans are social animals that seek camaraderie since it alleviates feelings of sadness,anxiety, loneliness, and stres. They further posit that absence of this connection can be detrimental to mental health. Social media has become an important life and comes with risks that lead to mental health issues. They stated that females are more likely to develop mental health issues than males are. Lastyle, they found that prolonged use of popular apps like facebook may lead to negative self-reported mental health problems like anxiety and depression. \n",
     "\n",
     "- 4) [Mental Health Statistics (National Institute of Mental Health)](https://www.nimh.nih.gov/health/statistics/mental-illness.shtml#part_155771)\n",
-    "\n",
-    "Explanation:\n",
-    "\n",
-    "- 5) [Data and Statistics on Children’s Mental Health](https://www.cdc.gov/childrensmentalhealth/data.html)\n",
-    "\n",
-    "Explanation:\n",
-    "\n",
-    "- 6) [The Latest Trends in Social Media](https://www.globalwebindex.com/hubfs/Downloads/Social-H2-2018-report.pdf)\n",
-    "\n",
-    "Explanation:\n",
-    "\n",
-    "- 7) [How the Modern World Makes Us Mentally Ill](https://www.youtube.com/watch?v=Wuf0-x9Pbu4&ab_channel=FightMediocrity)\n",
-    "\n",
-    "Explanation:"
+    "This source helped us learn the prevalence of mental illnesses and more specifically in the age range we target in our study. It turns out that 29.4% of individuals aged 18-25 reported some form of mental illness in the year 2019.\n"
    ]
   },
   {
@@ -116,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We believe that there is a correlation between social media use of teenagers and the rising number in mental health disorders amongst them in the United States, such as depression and anxiety, and has a more negative impact on teenage girls."
+    "We believe that there is a positive correlation between social media usage of teenagers and the rising number in mental health disorders amongst them in the United States, specifically depression and anxiety, and that more females are impacted."
    ]
   },
   {
@@ -1706,7 +1693,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Fill in your ethics & privacy discussion here*"
+    "Our survey explicitly stated the intentions for the data collection and that all answers are anonymous. We also stated on our social media platforms that we planned to use the data for our class project. We thus received consent and respected the privacy of each responder."
    ]
   },
   {
@@ -1720,9 +1707,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusion:\n",
+    "Conclusion: Our results demonstrate that there is a correlation in between social media usage and mental health disorders. There is a correlation between app count and depression disorder as well as anxiety disorder. Similarly, there is also a correlation between number of hours spent on social media and depression disorder as well as anxiety disorder.\n",
     "\n",
-    "Discussion: We believe that we learned a lot about the data science process through this project. Coming into this class none of us had done anything similar. We have prior experience in coding but not using pandas or working with data in this format. This turned out to be our biggest limitation as we went to gather our own data through the use of a survey. WE believe that we asked good questions but since we weren't familiar with which data types were the most useful to work with in Pandas we definitely made some mistakes on the input types we took from the survey. We think if we were to continue research into this field the area where we could make the largest improvement is our data gathering. Also to improve our machine learning model a larger response size we think would be able to improve the accuracy."
+    "Discussion: We believe that we learned a lot about the data science process through this project. Coming into this class none of us had done anything which resembled this assignment. We have prior experience in coding but not with using pandas or working with data in this specific format. This turned out to be our biggest limitation as we went to gather our own data through the use of a survey. We asked good questions but since we weren't familiar with which data types were the most useful to work with in Pandas we definitely made some mistakes on the input types we took from the survey. We think if we were to continue research into this field the area where we could make the largest improvement is data gathering. Also to improve our machine learning model a larger response size we think would be able to improve the accuracy. Another limitation was our inability to gather clinical data from our survey responders. We had to trust that their self report was accurate in some way. Many people simply do not have access to any medical professionals who could give them clinical diagnoses for their mental health. It is still likely that some of them in the data set have been clinically diagnose. We felt it was too intrusive to do demand a legitimate dianoses from a doctor. We still agreed that any report of mental health issues should be taken into consideration."
    ]
   },
   {
